new menu section
new menu section

--- a/cafe/src/main/resources/context/language_en_US.properties
+++ b/cafe/src/main/resources/context/language_en_US.properties
@@ -1,5 +1,10 @@
 action.delete = Delete
 action.to_cart = To cart
+action.add_new_section = Add new menu section
+section.title = Sections
+section.name = Section name
+section.invalid_name = Name contains more than 20 symbols
+section.not_uniq_name = Not uniq section name
 admin.title_users = Users
 admin.list_users = List of users
 admin.block_action = Block
@@ -51,6 +56,7 @@ menu.invalid_product_price = Invalid product price
 menu.invalid_cooking_time = Enter cooking time
 menu.invalid_product_section = Select product section
 menu.cost_with_product_discount = The price with discount
+menu.products = Products
 menu.number_products = Number of products
 order.address = Address
 order.comment = Order comment
