--- a/cafe/src/main/resources/context/language_ru_RU.properties
+++ b/cafe/src/main/resources/context/language_ru_RU.properties
@@ -1,5 +1,10 @@
 action.delete = Удалить
 action.to_cart = В корзину
+action.add_new_section = Добавить новый раздел меню
+section.title = Разделы
+section.name = Название раздела
+section.invalid_name = Название содержит более 20 символов
+section.not_uniq_name = Название раздела не уникально
 admin.title_users = пользователи
 admin.list_users = Список пользователей
 admin.block_action = Заблокировать
@@ -52,6 +57,7 @@ menu.invalid_cooking_time = Введите время приготовления
 menu.invalid_product_section = Выберете раздел меню
 menu.cost_with_product_discount = Цена со скидкой
 menu.number_products = Количество
+menu.products = Состав
 order.address = Адрес
 order.comment = Комментарий к заказу
 order.confirm = Подтвердить
