restoring sections and products
restoring sections and products

--- a/cafe/src/main/resources/context/language_en_US.properties
+++ b/cafe/src/main/resources/context/language_en_US.properties
@@ -2,6 +2,7 @@ action.delete = Delete
 action.delete_old_orders = Delete old orders
 action.result_success = The action was successful
 action.change = Change
+action.restore = Restore
 action.to_cart = To cart
 action.add_new_section = Add new menu section
 action.change_section_name = Change section name
@@ -19,13 +20,14 @@ admin.block_action = Block
 admin.unblock_action = Unblock
 admin.users_state = State
 admin.users_action = Action
+admin.empty_users = User list is empty
 error.login_or_password = Incorrect login or password
 header.about_us = About us
 header.contacts = Contacts
 header.brand = GoodCafe
 header.language = RU/ENG
 header.main = Main
-header.sign_in = sign in
+header.sign_in = Sign in
 header.menu = Menu
 header.profile = Profile
 header.basket = Basket
@@ -89,7 +91,7 @@ order.message = The order was placed successfully. In the near future, the opera
 registration.name = Registration
 registration.correct_gmail = You can use letters, numbers and points (1-30 symbols)
 registration.correct_password = You can use letters, numbers and points (5-40 symbols)
-registration.correct_phone_number = 29*******, 44*******, 25*******
+registration.correct_phone_number = 29*******, 44*******, 25*******, 33*******
 registration.correct_login = You can use letters, numbers and underlining (4-16 symbols)
 registration.not_uniq_login = Login is not uniq
 registration.not_uniq_phone = Phone is not uniq
@@ -140,3 +142,5 @@ user.discount_head = Number of orders, more than
 title.update_product = Update product
 success.title = Success
 main.title = Main
+restore.title = Restore
+restore.empty = List is empty
