--- a/cafe/src/main/resources/context/language_en_US.properties
+++ b/cafe/src/main/resources/context/language_en_US.properties
@@ -45,6 +45,9 @@ menu.title = Menu
 menu.sort = Sort
 menu.sort_by_price = By price
 menu.product_weight = Weight
+menu.weight_pattern = Up to 2 characters after the dot
+menu_discount_pattern = Decimal number. Up to 2 characters after the dot
+menu.cost_pattern = Up to 2 characters after the dot
 menu.product_composition = Composition
 menu.product_money = rubles
 menu.product_discount = Discount
@@ -141,6 +144,26 @@ user.discount_product = orders
 user.discount_head = Number of orders, more than
 title.update_product = Update product
 success.title = Success
+settings.not_uniq_new_password = It is an old password
 main.title = Main
 restore.title = Restore
 restore.empty = List is empty
+cafe.address = Revolutionary 28, Minsk
+cafe.work = WORKING HOURS 
+cafe.delivery = Delivery
+cafe.booking = BOOKING
+cafe.home_title = GoodCafe - RESTAURANT WITH FREE HOME DELIVERY
+cafe.home_text_one = If you are a connoisseur of delicious cuisine, then do not deny yourself the pleasure and order delicious food in Minsk.\
+On our website you will find a wide range of dishes for every taste. All of them are made from fresh products and natural ingredients.\
+Real masters of their craft are working on the preparation. Our dishes are the best option for proper nutrition.
+cafe.home_text_two = There are a lot of different recipes for dishes and they are constantly updated. The chefs of "GoodCafe" are constantly working on refining and improving the menu,\
+updating and adding new original dishes.
+cafe.home_text_three = On our website you can buy the dishes that you like the most.
+cafe.kitchen = KITCHEN AT HOME FROM GoodCafe
+cafe.kitchen_text_one = You can order food in Minsk with delivery around the city, as well as outside the MKAD, using a special form on our website or by the specified phone numbers.\
+You can leave a request by phone from 10:30 to 22:30, on the website around the clock (order processing is carried out from 10:30 to 22:30). Estimated delivery time is 1 h. - 1 h.20 min.\
+During rush hour, weekends and holidays, as well as outside the MKAD, the delivery time may increase. The delivery time will be agreed with you by the service manager.
+cafe.kitchen_text_two = We prepare the best dishes in Minsk for every customer and therefore the quality of our products is always at the highest level. You can see this for yourself by ordering most of the products\
+in a special section of the site.. If you want to have a good time and still have a delicious meal, then our company "GoodCafe" will help you with this.\
+Order our dishes at least once, and you will definitely want more - it has already been tested.
+cafe.the_end = Bon Appetit!
