--- a/cafe/src/main/resources/context/language_ru_RU.properties
+++ b/cafe/src/main/resources/context/language_ru_RU.properties
@@ -70,6 +70,9 @@ menu.invalid_product_section = Выберете раздел меню
 menu.cost_with_product_discount = Цена со скидкой
 menu.number_products = Количество
 menu.products = Состав
+menu.weight_pattern = До 2 знаков после точки
+menu_discount_pattern = Десятичное число. До 2 знаков после точки.
+menu.cost_pattern = До 2 знаков после точки
 menu.empty = Нет доступных товаров
 order.address = Адрес
 order.comment = Комментарий к заказу
@@ -141,6 +144,26 @@ user.discount_product = заказов
 user.discount_head = Количество заказов, более чем
 title.update_product = Обновить товар
 success.title = Успех
+settings.not_uniq_new_password = Введен старый пароль
 main.title = Главная
 restore.title = Восстановить
 restore.empty = Пустой список
+cafe.address = Революционная 28, Минск
+cafe.work = РЕЖИМ РАБОТЫ
+cafe.delivery = Доставка
+cafe.booking = БРОНИРОВАНИЕ
+cafe.home_title = «GoodCafe» – РЕСТОРАН С БЕСПЛАТНОЙ ДОСТАВКОЙ НА ДОМ
+cafe.home_text_one = Если вы являетесь ценителем вкусной кухни, то не откажите себе в удовольствии и заказать вкуснейшую еду в Минске.\
+На нашем сайте вы найдете широкий ассортимент блюд на любой вкус. Все они сделаны из свежих продуктов и натуральных ингредиентов.\
+Над приготовлением работают настоящие мастера своего дела. Наши блюда - это оптимальный вариант правильного питания.
+cafe.home_text_two = Различных рецептов блюд очень много и они постоянно обновляются. Шеф-повары «GoodCafe» постоянно работают над доработкой и улучшением меню,\
+обновляя и добавляя новые оригинальные блюда.
+cafe.home_text_three = На нашем сайте вы сможете купить блюда, которые вы больше всего любите.
+cafe.kitchen = КУХНЯ НА ДОМ ОТ GoodCafe
+cafe.kitchen_text_one = Заказать еду в Минске с доставкой по городу, а также за пределы МКАД, можно с помощью специальной формы на нашем сайте или по указанным телефонам.\
+Оставить заявку по телефону можно с 10:30 до 22:30, на сайте круглосуточно (обработка заказа осуществляется с 10:30 до 22:30). Ориентировочное время доставки 1 ч. - 1 ч.20 мин.\
+В час пик, выходные и праздничные дни, а также за пределы МКАД срок доставки может увеличиться. Время доставки с Вами согласует диспетчер службы.
+cafe.kitchen_text_two = Мы готовим лучшие блюда в Минске для каждого покупателя и поэтому качество наших продуктов всегда на высшем уровне. Вы можете убедиться в этом сами, заказав большинство продуктов\
+в специальном разделе сайта.. Если вы хотите хорошо провести свое время и при этом еще вкусно поесть, то наша компания «GoodCafe» вам в этом поможет.\
+Сделайте заказ наших блюд хотя бы один раз, и вы точно захотите еще - это уже проверено.
+cafe.the_end = Приятного аппетита!
