--- a/cafe/src/main/resources/context/language_en_US.properties
+++ b/cafe/src/main/resources/context/language_en_US.properties
@@ -1,4 +1,5 @@
 action.delete = Delete
+action.sort = Sort
 action.delete_old_orders = Delete old orders
 action.result_success = The action was successful
 action.change = Change
@@ -42,8 +43,9 @@ form.button.back_main = Go back
 form.user_status_blocked = The user is blocked by admin
 menu.all_menu = All
 menu.title = Menu
-menu.sort = Sort
 menu.sort_by_price = By price
+menu.sort_by_popularity = By popularity
+menu.sort_by_novelty = By novelty
 menu.product_weight = Weight
 menu.weight_pattern = Up to 2 characters after the dot
 menu_discount_pattern = Decimal number. Up to 2 characters after the dot
