--- a/cafe/src/main/resources/context/language_ru_RU.properties
+++ b/cafe/src/main/resources/context/language_ru_RU.properties
@@ -1,4 +1,5 @@
 action.delete = Удалить
+action.sort = Сортировать
 action.delete_old_orders = Удалить старые заказы
 action.change = Изменить
 action.result_success = Действие прошло успешно
@@ -42,8 +43,9 @@ form.button.back_main = Выйти
 form.user_status_blocked = Данный пользователь заблокирован администратором
 menu.all_menu = Все
 menu.title = Меню
-menu.sort = Сортировать
 menu.sort_by_price = По цене
+menu.sort_by_popularity = По популярности
+menu.sort_by_novelty = По новизне
 menu.product_weight = Вес
 menu.product_composition = Состав
 menu.product_money = руб
