--- a/cafe/src/main/resources/context/language_en_US.properties
+++ b/cafe/src/main/resources/context/language_en_US.properties
@@ -35,7 +35,7 @@ header.basket = Basket
 header.sign_out = Sign out
 header.orders = Orders
 header.users = Users
-header.registration = new admin
+header.registration = New admin
 form.sign_in.login = Login
 form.sign_in.password= Password
 form.sign_in = Sign in
@@ -45,7 +45,6 @@ menu.all_menu = All
 menu.title = Menu
 menu.sort_by_price = By price
 menu.sort_by_popularity = By popularity
-menu.sort_by_novelty = By novelty
 menu.product_weight = Weight
 menu.weight_pattern = Up to 2 characters after the dot
 menu_discount_pattern = Decimal number. Up to 2 characters after the dot
