--- a/cafe/src/main/resources/context/language_ru_RU.properties
+++ b/cafe/src/main/resources/context/language_ru_RU.properties
@@ -35,7 +35,7 @@ header.basket = Корзина
 header.sign_out = Выход
 header.orders = Заказы
 header.users = Пользователи
-header.registration = добавить админа
+header.registration = Добавить админа
 form.sign_in.login = Логин
 form.sign_in.password= Пароль
 form.sign_in = Вход
@@ -45,7 +45,6 @@ menu.all_menu = Все
 menu.title = Меню
 menu.sort_by_price = По цене
 menu.sort_by_popularity = По популярности
-menu.sort_by_novelty = По новизне
 menu.product_weight = Вес
 menu.product_composition = Состав
 menu.product_money = руб
